fixed link for submitting issues (was pointing to alreq/issues)

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ ins {
   <div class="note">
     <p data-lang="en" style="font-weight: bold; font-size: 120%">Sending comments on this
       document</p>
-    <p data-lang="en">If you wish to make comments regarding this document, please raise them as <a href="https://github.com/w3c/alreq/issues" style="font-size: 120%;">github issues</a> 
+    <p data-lang="en">If you wish to make comments regarding this document, please raise them as <a href="https://github.com/w3c/unicode-xml/issues" style="font-size: 120%;">github issues</a> 
       <!--against the <a href="http://www.w3.org/TR/2015/WD-ilreq-20150721/" style="font-size: 120%">latest dated version in /TR</a>-->.
       Only send comments by email if you are unable to raise issues on github (see links below).
       All comments are welcome.</p>
