--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           noRecTrack:           true,
           shortName:            "unicode-xml",
           copyrightStart: 		"1999",
-          edDraftURI:   		"http://w3c.github.io/unicode-xml/",
+          edDraftURI:   		"https://w3c.github.io/unicode-xml/",
 
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
@@ -36,7 +36,7 @@
          
 
           wg:           "Internationalization Working Group",
-          wgURI:         "http://www.w3.org/International/core/",
+          wgURI:         "https://www.w3.org/International/core/",
           wgPublicList: "www-international",
 		  bugTracker: { new: "https://github.com/w3c/unicode-xml/issues", 
 		  				open: "https://github.com/w3c/unicode-xml/issues" } ,
@@ -58,7 +58,7 @@
           // This is important for Rec-track documents, do not copy a patent URI from a random
           // document unless you know what you're doing. If in doubt ask your friendly neighbourhood
           // Team Contact.
-          wgPatentURI:  "http://www.w3.org/2004/01/pp-impl/32113/status",
+          wgPatentURI:  "https://www.w3.org/2004/01/pp-impl/32113/status",
           // !!!! IMPORTANT !!!! MAKE THE ABOVE BLINK IN YOUR HEAD
       };
     </script>
@@ -511,10 +511,10 @@ href="#HTML4.0-8.2">HMTL 4.0-8.2</a>]. The text of HTML 4.0 gives this
     <p><strong>Using HTML directionality markup with Unicode
         characters.</strong> Authors and designers of authoring software should be
         aware that conflicts can arise if the <a
-  href="http://www.w3.org/TR/html401/struct/dirlang.html#adef-dir"
+  href="https://www.w3.org/TR/html401/struct/dirlang.html#adef-dir"
   class="noxref"><samp class="ainst">dir</samp></a> attribute is used on
         inline elements (including <a
-  href="http://www.w3.org/TR/html401/struct/dirlang.html#edef-BDO"
+  href="https://www.w3.org/TR/html401/struct/dirlang.html#edef-BDO"
   class="noxref"><samp class="einst">BDO</samp></a>) concurrently with the
         corresponding <a href="#Unicode"
   class="normref">[UNICODE]</a> formatting characters. Preferably one or the
@@ -1597,103 +1597,103 @@ href="#Unicode">Unicode</a>]), can be handled in three main ways.</p>
     <dd>Martin J. Dürst, François Yergeau, Richard Ishida, Misha Wolf, Tex
       Texin, Eds., <cite>Character Model for the World Wide Web 1.0:
       Fundamentals</cite>, W3C Recommendation, 15-February-2005, &lt;<a
-      href="http://www.w3.org/TR/2005/REC-charmod-20050215/">http://www.w3.org/TR/2005/REC-charmod-20050215/</a>&gt;.</dd>
+      href="https://www.w3.org/TR/2005/REC-charmod-20050215/">https://www.w3.org/TR/2005/REC-charmod-20050215/</a>&gt;.</dd>
     <dt id="CharReq">[CharReq]</dt>
     <dd>Martin J. Dürst, <cite>Requirements for String Identity and Character
       Indexing Definitions for the WWW</cite>, W3C Working Draft,
       10-July-1998, &lt;<a
-      href="http://www.w3.org/TR/WD-charreq">http://www.w3.org/TR/WD-charreq</a>&gt;.</dd>
+      href="https://www.w3.org/TR/WD-charreq">https://www.w3.org/TR/WD-charreq</a>&gt;.</dd>
     <dt id="CSS">[CSS]</dt>
     <dd>For information on cascading style sheet specifications, see &lt;<a
-      href="http://www.w3.org/Style/CSS/">http://www.w3.org/Style/CSS/</a>&gt;.</dd>
+      href="https://www.w3.org/Style/CSS/">https://www.w3.org/Style/CSS/</a>&gt;.</dd>
     <dt id="Feedback">[Feedback]</dt>
     <dd>Reporting Errors and Requesting Information Online to the Unicode
       Consortium,<i>&lt;</i><a
-      href="http://www.unicode.org/reporting.html">http://www.unicode.org/reporting.html</a>&gt;.</dd>
+      href="https://www.unicode.org/reporting.html">https://www.unicode.org/reporting.html</a>&gt;.</dd>
     <dt id="html4.01">[HTML4.01]</dt>
     <dd>Dave Raggett, Arnaud Le Hors, Ian Jacobs, Eds., <cite>HTML 4.01
       Specification</cite>, W3C Recommendation, 18-Dec-1997 (revised on
       24-Dec-1999), &lt;<a
-      href="http://www.w3.org/TR/1999/REC-html401-19991224/">http://www.w3.org/TR/1999/REC-html401-19991224/</a>&gt;.</dd>
+      href="https://www.w3.org/TR/1999/REC-html401-19991224/">https://www.w3.org/TR/1999/REC-html401-19991224/</a>&gt;.</dd>
     <dt id="HTML4.0-8.2">[HTML 4.0 - 8.2]</dt>
     <dd>Section 8.2 of [HTML4.0] <cite>Specifying the direction of text and
       tables: the dir attribute</cite> &lt;<a
-      href="http://www.w3.org/TR/1999/REC-html401-19991224/struct/dirlang.html#h-8.2">http://www.w3.org/TR/1999/REC-html401-19991224/struct/dirlang.html#h-8.2</a>&gt;.</dd>
+      href="https://www.w3.org/TR/1999/REC-html401-19991224/struct/dirlang.html#h-8.2">https://www.w3.org/TR/1999/REC-html401-19991224/struct/dirlang.html#h-8.2</a>&gt;.</dd>
     <dt id="MathML">[MathML]</dt>
     <dd>David Carlisle, Patrick Ion, Robert Miner, Nico Poppelier, Eds., <cite>Mathematical Mathematical Markup Language (MathML) Version 2.0
       (Second Edition)</cite>, W3C Recommendation, 21-Oct-2003, &lt;<a
-      href="http://www.w3.org/TR/2003/REC-MathML2-20031021/">http://www.w3.org/TR/2003/REC-MathML2-20031021/</a>&gt;.</dd>
+      href="https://www.w3.org/TR/2003/REC-MathML2-20031021/">https://www.w3.org/TR/2003/REC-MathML2-20031021/</a>&gt;.</dd>
     <dt id="Namespace">[Namespace]</dt>
     <dd>Tim Bray, Dave Hollander, Andrew Layman, Eds., <cite>Namespaces in XML
       (Second Edition)</cite>, W3C Recommendation, 16-Aug-2006, &lt;<a
-      href="http://www.w3.org/TR/2006/REC-xml-names-20060816/">http://www.w3.org/TR/2006/REC-xml-names-20060816/</a>&gt;.</dd>
+      href="https://www.w3.org/TR/2006/REC-xml-names-20060816/">https://www.w3.org/TR/2006/REC-xml-names-20060816/</a>&gt;.</dd>
     <dt id="Ruby">[Ruby]</dt>
     <dd>Marcin Sawicki, Michel Suignard, Masayasu Ishikawa, Martin Dürst, Tex
       Texin, Eds., <cite>Ruby Annotation</cite>, W3C Recommendation, 31-May-2001,
       &lt;<a
-      href="http://www.w3.org/TR/2001/REC-ruby-20010531/">http://www.w3.org/TR/2001/REC-ruby-20010531/</a>&gt;.</dd>
+      href="https://www.w3.org/TR/2001/REC-ruby-20010531/">https://www.w3.org/TR/2001/REC-ruby-20010531/</a>&gt;.</dd>
     <dt id="UTR9">[UAX 9]</dt>
     <dd>Mark Davis, <cite>Unicode Standard Annex #9, The Bidirectional
       Algorithm</cite>, &lt;<a
-      href="http://www.unicode.org/reports/tr9/">http://www.unicode.org/reports/tr9/</a>&gt;.</dd>
+      href="https://www.unicode.org/reports/tr9/">https://www.unicode.org/reports/tr9/</a>&gt;.</dd>
     <dt id="UAX14">[UAX14]</dt>
     <dd>Asmus Freytag,<cite>Unicode Standard Annex #14,</cite> <cite>Line Breaking
       Properties</cite> <a
-      href="http://www.unicode.org/reports/tr14/">http://www.unicode.org/reports/tr14/</a></dd>
+      href="https://www.unicode.org/reports/tr14/">https://www.unicode.org/reports/tr14/</a></dd>
     <dt id="UTR15">[UAX 15]</dt>
     <dd>Mark Davis, Martin Dürst, <cite>Unicode Standard Annex #15, Unicode
       Normalization Forms</cite>, &lt;<a
-      href="http://www.unicode.org/reports/tr15/">http://www.unicode.org/reports/tr15/</a>&gt;.</dd>
+      href="https://www.unicode.org/reports/tr15/">https://www.unicode.org/reports/tr15/</a>&gt;.</dd>
     <dt id="UAX29">[UAX 29]</dt>
     <dd>Mark Davis,<cite>Unicode Standard Annex #29</cite>, <cite>Text Boundaries</cite>. <a
-      href="http://www.unicode.org/reports/tr29/">&lt;http://www.unicode.org/reports/tr29/&gt;</a></dd>
+      href="https://www.unicode.org/reports/tr29/">&lt;https://www.unicode.org/reports/tr29/&gt;</a></dd>
     <dt id="UCD">[UCD]</dt>
     <dd><cite>Unicode Standard Annex #44, Unicode Character Database</cite>, &lt;<a
-      href="http://www.unicode.org/reports/tr44/">http://www.unicode.org/reports/tr44/</a>&gt;.</dd>
+      href="https://www.unicode.org/reports/tr44/">https://www.unicode.org/reports/tr44/</a>&gt;.</dd>
     <dt id="Unicode">[Unicode]</dt>
     <dd>The Unicode Consortium.<cite>The Unicode
-      Standard</cite> <a href="http://www.unicode.org/versions/latest/">http://www.unicode.org/versions/latest/</a>. </dd>
+      Standard</cite> <a href="https://www.unicode.org/versions/latest/">https://www.unicode.org/versions/latest/</a>. </dd>
     <dt id="Unicode32">[Unicode3.2]</dt>
     <dd><cite>Unicode Standard Annex #28 <a
-      href="http://www.unicode.org/versions/Unicode3.2.0/">Unicode 3.2</a></cite>, The
+      href="https://www.unicode.org/versions/Unicode3.2.0/">Unicode 3.2</a></cite>, The
       Unicode Consortium, 2002.</dd>
     <dt id="UnicodeData">[UnicodeData]</dt>
     <dd><cite>Unicode Character Database</cite>, &lt;<a
-      href="http://www.unicode.org/Public/UNIDATA/UCD.html">http://www.unicode.org/Public/UNIDATA/UCD.html</a>&gt;.</dd>
+      href="https://www.unicode.org/Public/UNIDATA/UCD.html">https://www.unicode.org/Public/UNIDATA/UCD.html</a>&gt;.</dd>
     <dt id="UnicodeVersions">[UnicodeVersions]</dt>
     <dd><cite>Versions of the Unicode Standard</cite>, &lt;<a
-      href="http://www.unicode.org/standard/versions/">http://www.unicode.org/standard/versions/</a>&gt;.</dd>
+      href="https://www.unicode.org/standard/versions/">https://www.unicode.org/standard/versions/</a>&gt;.</dd>
     <dt id="UTR25">[UTR25]</dt>
     <dd>Asmus Freytag, Barbara Beeton, Murray Sargent, <cite>Unicode Technical
       Report #25, Unicode Support for Mathematics, &lt;<a
-      href="http://www.unicode.org/reports/tr25/">http://www.unicode.org/reports/tr25/</a>&gt;</cite></dd>
+      href="https://www.unicode.org/reports/tr25/">https://www.unicode.org/reports/tr25/</a>&gt;</cite></dd>
     <dt id="Variants">[Variants]</dt>
     <dd>Standardized Variants &lt;<a
-      href="http://www.unicode.org/Public/UNIDATA/StandardizedVariants.html">http://www.unicode.org/Public/UNIDATA/StandardizedVariants.html</a>&gt;.</dd>
+      href="https://www.unicode.org/Public/UNIDATA/StandardizedVariants.html">https://www.unicode.org/Public/UNIDATA/StandardizedVariants.html</a>&gt;.</dd>
     <dt id="XHTML">[XHTML]</dt>
     <dd>Steven Pemberton, et al., Eds., <cite>XHTML>&trade;<cite>1.0: The Extensible
       HyperText Markup Language - A Reformulation of HTML 4.0 in XML
       1.0</cite>, W3C Recommendation, 01-Aug-2002, &lt;<a
-      href="http://www.w3.org/TR/2002/REC-xhtml1-20020801/">http://www.w3.org/TR/2002/REC-xhtml1-20020801/</a>&gt;.</dd>
+      href="https://www.w3.org/TR/2002/REC-xhtml1-20020801/">https://www.w3.org/TR/2002/REC-xhtml1-20020801/</a>&gt;.</dd>
     <dt id="xml10">[XML 1.0]</dt>
     <dd>Tim Bray, Jean Paoli, Eve Maler, C. M. Sperberg-McQueen, François
       Yergeau, Eds., <cite>Extensible Markup Language (XML) 1.0 (Fourth
       Edition)</cite>, W3C Recommendation, 16-August-2006, &lt;<a
-      href="http://www.w3.org/TR/2006/REC-xml-20060816/">http://www.w3.org/TR/2006/REC-xml-20060816/</a>&gt;.</dd>
+      href="https://www.w3.org/TR/2006/REC-xml-20060816/">https://www.w3.org/TR/2006/REC-xml-20060816/</a>&gt;.</dd>
     <dt id="XSLT">[XLST]</dt>
     <dd>Michael Kay, Ed., <cite>XSL Transformations (XSLT) Version 2.0</cite>, W3C
       Recommendation, 23-January-2007, &lt;<a
-      href="http://www.w3.org/TR/2007/REC-xslt20-20070123/">http://www.w3.org/TR/2007/REC-xslt20-20070123/</a>&gt;</dd>
+      href="https://www.w3.org/TR/2007/REC-xslt20-20070123/">https://www.w3.org/TR/2007/REC-xslt20-20070123/</a>&gt;</dd>
     <dt id="xml11">[XML 1.1]</dt>
     <dd>Jean Paoli, Eve Maler, Tim Bray, C. M. Sperberg-McQueen, François
       Yergeau, John Cowan, Eds., <cite>Extensible Markup Language (XML) 1.1
       (Second Edition)</cite>, W3C Recommendation 16-August-2006, &lt;<a
-      href="http://www.w3.org/TR/2006/REC-xml11-20060816/">http://www.w3.org/TR/2006/REC-xml11-20060816/</a>&gt;. </dd>
+      href="https://www.w3.org/TR/2006/REC-xml11-20060816/">https://www.w3.org/TR/2006/REC-xml11-20060816/</a>&gt;. </dd>
     <dt id="XMLSchema">[XML Schema]</dt>
     <dd>Henry S. Thompson, David Beech, Murray Maloney, Noah Mendelsohn,
       Eds., <cite>XML Schema Part 1: Structures Second Edition</cite>, W3C
       Recommendation 28-October-2004, &lt;<a
-      href="http://www.w3.org/TR/2004/REC-xmlschema-1-20041028/">http://www.w3.org/TR/2004/REC-xmlschema-1-20041028/</a>&gt;
+      href="https://www.w3.org/TR/2004/REC-xmlschema-1-20041028/">https://www.w3.org/TR/2004/REC-xmlschema-1-20041028/</a>&gt;
       . </dd>
   </dl>
 </section>
