I18N-ACTION-616 Update unicode-xml to indicate current status

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       var respecConfig = {
           // specification status (e.g. WD, LCWD, WG-NOTE, etc.). If in doubt use ED.
           specStatus:          "ED",
-          publishDate:  		"2016-05-03",
+          publishDate:  		"2017-05-06",
           previousPublishDate:  "2016-05-03",
           previousMaturity:  	"WG-NOTE",
 
@@ -30,7 +30,7 @@
                 company: "Unicode Consortium" },
 			     ],
           editors:  [
-              { name: "Martin Dürst", mailto: "duerst@it.aoyama.ac.jp",
+              { name: "Addison Phillips", mailto: "addison@amazon.com",
                 company: "Invited Expert" },
 			     ],
          
@@ -96,7 +96,13 @@ ins {
 
 
 <div id="sotd">
-  <p>This document contains guidelines on the use of the Unicode Standard in conjunction with markup languages such as XML. It was originally produced as a joint publication between the W3C and the Unicode Consortium. It is now being maintained solely by the W3C.  The document will be published as a Working Group Note.</p>
+  <p>This document contains guidelines on the use of the Unicode Standard in 
+  conjunction with markup languages such as XML. It was originally produced 
+  as a joint publication between the W3C and the <a href="http://www.unicode.org">Unicode 
+  Consortium</a>. In 2016, Unicode withdrew publication as a Unicode Technical 
+  Report. The W3C is maintaining this version as a historical reference.
+  Some of the materials in this document might be stale or out of date. 
+  </p>
   <div class="note">
     <p style="font-weight: bold; font-size: 120%">Sending comments on this
       document</p>
