depreciation-box title changed to This document has been withdrawn

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ ins {
 	<p>This document contains guidelines on the use of the Unicode Standard in 
   conjunction with markup languages such as XML.</p>
 	<div class="deprecation-box">
-		<h3>Historical Status</h3>
+		<h3>This document has been withdrawn</h3>
   <p>Many of the materials in this document are stale and out of date; 
   the W3C is maintaining this version solely as a historical reference. 
   This document was originally produced as a joint publication between 
